# Catch-up

./: .gitmodules  CMakeLists.txt  README.md  build.bat
Engine/: CMakeLists.txt
Engine/include/: application.h  component.h  core.h  game_object.h  object.h  random.h  scene.h  script_behaviour.h  time_step.h  timer.h  uuid.h
Engine/include/components/: drawable.h  transform.h  vector2f.h  vector3f.h  vector4f.h
Engine/include/components/colliders/: box_collider.h  collider.cpp  collider.h
Engine/include/components/drawable/: drawable.h  drawable_component.h  rectangle_drawable.h
Engine/include/components/rigidbody/: rigid_body.h
Engine/libs/SDL/VisualC/tests/testautomation/: testautomation.vcxproj
Engine/src/: application.cpp  core.cpp  props.h
Engine/src/Catch-up/: props.h
Engine/src/Catch-up/core/: application.cpp  time_step.h  uuid.cpp  window.h
Engine/src/Catch-up/events/: event.h  key_event.h
Engine/src/Catch-up/include/: component.cpp  component_base.cpp  component_base.h  game_object.cpp  object.cpp  random.cpp  scene.cpp  scene.h  script_behaviour.cpp  time_step.cpp  timer.cpp
Engine/src/Catch-up/include/components/: transform.cpp  vector2f.cpp  vector3f.cpp  vector4f.cpp
Engine/src/Catch-up/include/components/colliders/: box_collider.cpp
Engine/src/Catch-up/include/components/drawable/: drawable.cpp  rectangle_drawable.cpp
Engine/src/Catch-up/include/components/id/: id_component.h
Engine/src/Catch-up/include/components/rigidbody/: rigid_body.cpp
Engine/src/Catch-up/physics/: collision_listener.h  physics2d.h
Engine/src/Catch-up/renderer/: renderer.cpp  renderer.h  renderer_api.cpp  renderer_api.h
Engine/src/Catch-up/scripting/: script_engine.h
Engine/src/Catch-up/utils/: platform_utils.h
Engine/src/Platform/SDL/: sdl_platform_utils.cpp  sdl_renderer_api.cpp  sdl_renderer_api.h  sdl_window.cpp  sdl_window.h
Engine/src/events/: event.h
Engine/src/include/: component.cpp  component_base.cpp  component_base.h  game_object.cpp  object.cpp  script_behaviour.cpp
Engine/src/include/components/: drawable.cpp  transform.cpp  vector2f.cpp
Engine/src/include/components/colliders/: collider.cpp
Engine/src/renderer/: renderer.cpp  renderer.h
Engine/src/renderer/SDL/: sdl_renderer.cpp  sdl_renderer.h
Engine/src/window/: window.h  window_props.h
Engine/src/window/SDL/: sdl_window.cpp  sdl_window.h
Game/: CMakeLists.txt
Game/include/: body.h  catch_up.h
Game/include/carrot/: carrot.h
Game/include/entity/: entity.h  entity_type.h
Game/include/event/: event_manager.h
Game/include/hare/: hare.h
Game/include/map/: map.h
Game/include/utils/: RayCast.h  box_collider.h
Game/include/wall/: wall.h
Game/include/wolf/: wolf.h
Game/src/: body.cpp  main.cpp
Game/src/entity/: BoxCollider.h  Hare.h  RayCast.h  Wall.h  Wolf.h  entity.cpp  entity.h  entity_type.h
Game/src/hare/: hare.cpp
Game/src/lua/: main.lua
Game/src/scripts/: catch_up.cpp
Game/src/scripts/body/: body.cpp
Game/src/scripts/carrot/: carrot.cpp
Game/src/scripts/entity/: entity.cpp
Game/src/scripts/event/: event_manager.cpp
Game/src/scripts/hare/: hare.cpp
Game/src/scripts/map/: map.cpp
Game/src/scripts/wall/: wall.cpp
Game/src/scripts/wolf/: wolf.cpp
Game/src/utils/: RayCast.cpp
Game/src/wall/: wall.cpp
Game/src/wolf/: wolf.cpp
